[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/dwarf_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/GrapplingGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/StateMachine.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/State.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/player/state_machine/StateIdle.gd" type="Script" id=6]
[ext_resource path="res://scripts/player/state_machine/StateWalk.gd" type="Script" id=7]
[ext_resource path="res://scripts/player/state_machine/StateFall.gd" type="Script" id=8]
[ext_resource path="res://scripts/player/state_machine/StateClimb.gd" type="Script" id=9]
[ext_resource path="res://scripts/player/state_machine/StateShoot.gd" type="Script" id=10]
[ext_resource path="res://scripts/player/state_machine/StateInteract.gd" type="Script" id=11]
[ext_resource path="res://assets/stone-step.wav" type="AudioStream" id=12]
[ext_resource path="res://scenes/HealthManager.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/PlayerHealthManager.gd" type="Script" id=14]
[ext_resource path="res://assets/light.png" type="Texture" id=15]
[ext_resource path="res://assets/grunt.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/shoot.wav" type="AudioStream" id=17]

[sub_resource type="CapsuleShape2D" id=10]
radius = 3.0
height = 1.0

[sub_resource type="Animation" id=7]
resource_name = "Climb"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.92, 1.32 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Interact"
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Shoot"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.9, 1.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 10 )

[node name="Graphics" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
root_node = NodePath("../..")
autoplay = "Idle"
anims/Climb = SubResource( 7 )
anims/Fall = SubResource( 6 )
anims/Idle = SubResource( 3 )
anims/Interact = SubResource( 8 )
anims/RESET = SubResource( 2 )
anims/Shoot = SubResource( 9 )
anims/Walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Graphics"]
texture = ExtResource( 1 )
hframes = 6
vframes = 2

[node name="StateLabel" type="Label" parent="Graphics"]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Items" type="Node2D" parent="."]

[node name="GrapplingGun" parent="Items" instance=ExtResource( 3 )]
position = Vector2( 0, 1 )

[node name="StateMachine" parent="." instance=ExtResource( 4 )]
initial_state = NodePath("Idle")

[node name="Idle" parent="StateMachine" instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="Walk" parent="StateMachine" instance=ExtResource( 5 )]
script = ExtResource( 7 )
movement_speed = 50

[node name="Fall" parent="StateMachine" instance=ExtResource( 5 )]
script = ExtResource( 8 )
gravity = 150

[node name="Climb" type="Node" parent="StateMachine" groups=["player_interaction"]]
script = ExtResource( 9 )

[node name="Interact" type="Node" parent="StateMachine" groups=["player_interaction"]]
script = ExtResource( 11 )

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="HealthManager" parent="." groups=["player_health"] instance=ExtResource( 13 )]
script = ExtResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_top = -550
drag_margin_h_enabled = true
drag_margin_left = 1.0
drag_margin_right = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="GroundRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 4.25 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 15 )
texture_scale = 0.5
color = Color( 1, 0.979, 0.79, 1 )
mode = 2
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
pitch_scale = 0.9
